--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "name": "phpactor/phpspec-extension",
-    "description": "Integration for PHPSpec",
+    "description": "Integration for Phpspec",
     "license": "MIT",
     "type": "phpactor-extension",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Daniel Leech",
@@ -11,12 +12,14 @@
     ],
 
     "require": {
-        "phpactor/container": "^1.0"
+        "phpactor/container": "^1.0",
+        "phpactor/worse-reflection-extension": "~0.1"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.10.6",
         "phpunit/phpunit": "^7.5",
-        "friendsofphp/php-cs-fixer": "^2.13"
+        "friendsofphp/php-cs-fixer": "^2.13",
+        "phpspec/phpspec": "^5.1"
     },
     "autoload": {
         "psr-4": {
@@ -25,7 +28,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Phpactor\\Extension\\PhpSpec\\Tests\\": "tests/"
+            "Phpactor\\Extension\\PhpSpec\\Tests\\": "tests/",
+            "spec\\Phpactor\\Extension\\PhpSpec\\Tests\\": "spec/"
         }
     },
     "extra": {
