--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
             "email": "daniel@dantleech.com"
         }
     ],
-
     "require": {
         "phpactor/container": "^1.0",
-        "phpactor/worse-reflection-extension": "~0.1"
+        "phpactor/worse-reflection-extension": "~0.1",
+        "php": "^7.3"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.10.6",
         "phpunit/phpunit": "^7.5",
-        "friendsofphp/php-cs-fixer": "^2.13",
-        "phpspec/phpspec": "^5.1"
+        "friendsofphp/php-cs-fixer": "^2.17",
+        "phpspec/phpspec": "^5.0||^6.0||^7.0||^8.0"
     },
     "autoload": {
         "psr-4": {
@@ -37,5 +37,6 @@
         "branch-alias": {
             "dev-master": "0.1.x-dev"
         }
-    }
+    },
+    "prefer-stable": true
 }
