Maestro updates PHPStan to version ~0.12.0

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,6 @@
 parameters:
-    paths: [ lib ]
-    ignoreErrors:
-        - '#Static call to instance method .*::fromString()#'
+    paths:
+        - lib
+    level: 7
+includes:
+    - phpstan-baseline.neon
