--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": "^7.3"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.10.6",
+        "phpstan/phpstan": "~0.12.0",
         "phpunit/phpunit": "^7.5",
         "friendsofphp/php-cs-fixer": "^2.17",
         "phpspec/phpspec": "^5.0||^6.0||^7.0||^8.0"
