--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
     },
     "require-dev": {
         "phpstan/phpstan": "~0.12.0",
-        "phpunit/phpunit": "^7.5",
+        "phpunit/phpunit": "^9.0",
         "friendsofphp/php-cs-fixer": "^2.17",
-        "phpspec/phpspec": "^5.0||^6.0||^7.0||^8.0"
+        "phpspec/phpspec": "^5.0||^6.0||^7.0||^8.0",
+        "rector/rector": "0.8.52",
+        "phpspec/prophecy-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
