--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         }
     ],
     "require": {
-        "phpactor/container": "dev-maestro-php8",
-        "phpactor/worse-reflection-extension": "dev-maestro-php8",
+        "phpactor/container": "^1.3.4",
+        "phpactor/worse-reflection-extension": "^0.2.4",
         "php": "^7.3 || ^8.0"
     },
     "require-dev": {
